--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,76 +40,71 @@
       - top
       - domain
 
-- name: Load groups and users parent entry
-  ldap_entry:
-    server_uri: "{{ldap_server_uri}}"
-    bind_dn: "{{ldap_basedn}}"
-    bind_pw: "{{ldap_bind_pw}}"
-    dn: "ou={{item}},{{ldap_basedn}}"
+- name: Load OUs
+  community.general.ldap_entry:
+    server_uri: "{{ ldap_auth.server_uri }}"
+    bind_dn: "{{ ldap_auth.bind_dn }}"
+    bind_pw: "{{ ldap_auth.bind_pw }}"
+    dn: "ou={{ item.value.ou }},{{ item.value.parent_ou }}"
     objectClass:
       - organizationalUnit
       - top
-  with_items:
-    - groups
-    - people
+    attributes:
+      ou: "{{ item.value.ou }}"
+  with_dict: "{{ ldap_ous }}"
+
+- name: Load groups
+  community.general.ldap_entry:
+    server_uri: "{{ ldap_auth.server_uri }}"
+    bind_dn: "{{ ldap_auth.bind_dn }}"
+    bind_pw: "{{ ldap_auth.bind_pw }}"
+    dn: "cn={{ item.name }},{{ item.parent_ou }}"
+    objectClass:
+      - posixGroup
+      - top
+    attributes:
+      gidNumber: "{{ item.gidNumber }}"
+  with_items: "{{ ldap_groups }}"
 
 - name: Load users
-  ldap_entry:
-    server_uri: "{{ldap_server_uri}}"
-    bind_dn: "{{ldap_basedn}}"
-    bind_pw: "{{ldap_bind_pw}}"
-    dn: "uid={{item.key}},ou=people,{{ldap_basedn}}"
+  community.general.ldap_entry:
+    server_uri: "{{ ldap_auth.server_uri }}"
+    bind_dn: "{{ ldap_auth.bind_dn }}"
+    bind_pw: "{{ ldap_auth.bind_pw }}"
+    dn: "uid={{ item.key }},{{ item.value.parent_ou }}"
     objectClass:
       - person
+      - posixAccount
       - organizationalPerson
       - inetOrgPerson
       - top
+      - shadowAccount
     attributes:
-      cn: "{{item.value.cn}}"
-      givenname: "{{item.value.givenname}}"
-      sn: "{{item.value.sn}}"
-      uid: "{{item.key}}"
-      mail: "{{item.value.mail}}"
-      userpassword: "{{item.value.userpassword}}"
-      #employeeNumber: "{{item.value.employeeNumber}}"
-  with_dict: "{{ldap_users}}"
-
-- name: Load groups
-  ldap_entry:
-    server_uri: "{{ldap_server_uri}}"
-    bind_dn: "{{ldap_basedn}}"
-    bind_pw: "{{ldap_bind_pw}}"
-    dn: "cn={{item.name}},ou=groups,{{ldap_basedn}}"
-    objectClass:
-      - groupOfUniqueNames
-      - top
-    attributes:
-      uniqueMember: "uid=dummy,ou=people,{{ldap_basedn}}"
-  with_items: "{{ldap_groups}}"
+      cn: "{{ item.value.cn }}"
+      givenname: "{{ item.value.givenname }}"
+      sn: "{{ item.value.sn }}"
+      uid: "{{ item.key }}"
+      uidNumber: "{{ item.value.uidNumber }}"
+      gidNumber: "{{ item.value.gidNumber }}"
+      mail: "{{ item.value.mail }}"
+      homeDirectory: "{{ item.value.homeDirectory }}"
+      userpassword: "{{ item.value.userpassword }}"
+      loginShell: "/bin/bash"
+      # employeeNumber: "{{item.value.employeeNumber}}"
+  with_dict: "{{ ldap_users }}"
 
 - name: Add users to groups
-  ldap_attrs:
-    server_uri: "{{ldap_server_uri}}"
-    bind_dn: "{{ldap_basedn}}"
-    bind_pw: "{{ldap_bind_pw}}"
-    dn: "cn={{item.0.name}},ou=groups,{{ldap_basedn}}"
+  community.general.ldap_attrs:
+    server_uri: "{{ ldap_auth.server_uri }}"
+    bind_dn: "{{ ldap_auth.bind_dn }}"
+    bind_pw: "{{ ldap_auth.bind_pw }}"
+    dn: "cn={{ item.0.name }},{{ item.0.parent_ou }}"
     attributes:
-      uniqueMember: "uid={{item.1}},ou=people,{{ldap_basedn}}"
+      memberUid: "{{ item.1 }}"
     state: present
   with_subelements:
-    - "{{ldap_groups}}"
+    - "{{ ldap_groups }}"
     - members
-
-- name: Remove dummy entry
-  ldap_attrs:
-    server_uri: "{{ldap_server_uri}}"
-    bind_dn: "{{ldap_basedn}}"
-    bind_pw: "{{ldap_bind_pw}}"
-    dn: "cn={{item.name}},ou=groups,{{ldap_basedn}}"
-    attributes:
-      uniqueMember: "uid=dummy,ou=people,{{ldap_basedn}}"
-    state: absent
-  with_items: "{{ldap_groups}}"
 
 - name: Restart ldap service
   service:
